# EvalSegment

./: CMakeLists.txt  README.md
EvaluateSegmentationResult/: CMakeLists.txt  EvaluateSegmentationResult.cpp  ReadMe.txt
GenerateResultsTable/: CMakeLists.txt  GenerateResultsTable.cpp  GenerateResultsTableLesion.cpp
